[workspace]
resolver = "2"
members = [
  "crates/raw-gpu-handle",
  "crates/raw-gpu-handle-ash",
  "crates/raw-gpu-handle-wgpu",
  "demo",
]
default-members = [
  "crates/raw-gpu-handle",
  "crates/raw-gpu-handle-ash",
  "crates/raw-gpu-handle-wgpu",
  "demo"
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/inner-daemons/raw-gpu-handle"
license = "MIT OR Apache-2.0"
keywords = ["graphics", "gpu"]

[workspace.dependencies]
raw-gpu-handle = { path = "crates/raw-gpu-handle" }
raw-gpu-handle-wgpu = { path = "crates/raw-gpu-handle-wgpu" }
wgpu = { git = "https://github.com/gfx-rs/wgpu.git", features = [
  "vulkan-portability",
] }
