[package]
name = "demo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
raw-gpu-handle.workspace = true
raw-gpu-handle-wgpu.workspace = true
wgpu.workspace = true
tokio = { version = "1.48", features = ["full"] }