[package]
name = "raw-gpu-handle-ash"
description = "raw-gpu-handle implementation for the `ash` crate"
readme = "../readme.md"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
