[package]
name = "raw-gpu-handle-wgpu"
description = "raw-gpu-handle implementation for the `wgpu` crate"
readme = "../readme.md"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
