[package]
name = "raw-gpu-handle-wgpu"
description = "raw-gpu-handle implementation for the `wgpu` crate"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
raw-gpu-handle.workspace = true
wgpu = { git = "https://github.com/gfx-rs/wgpu.git", features = [
  "vulkan-portability",
] }

ash = "*"
thiserror = "2.0"
